# pyagentbrowser

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-wheel.yml  check-release.yml  publish-pypi.yml  publish.yml
crates/: AGENTS.md
crates/agent-browser-adapter/: Cargo.toml  build.rs
crates/agent-browser-adapter/src/: lib.rs
crates/agent-browser-adapter/tests/: smoke.rs
crates/pyagentbrowser/: Cargo.toml  build.rs
crates/pyagentbrowser/src/: lib.rs
development_docs/: architecture.md  maintenance.md
docs/: api-reference.md  api.md  choosing-a-tool.md  concepts.md  development.md  getting-started.md  guides.md  index.md  install.md  quickstart.md  testing.md  version-policy.md
docs/adr/: 0001-native-safety-patches.md  0002-python-sdk-tool-boundary.md  native-safety-patches.json
docs/internals/: upstream.md
examples/: async_usage.py  basic_navigation.py  cdp_frame_eval.py  confirmation_policy.py  default_session.py  local_snapshot_evidence.py  restore_session.py  screenshot_capture.py  snapshot_evidence.py  xpath_queries.py
scripts/: __init__.py  check_chrome.py  check_docs.py  package_smoke.py  prepare_prerelease.py  release.sh  update-upstream.sh  update_upstream.py  verify-install-artifacts.py
src/agentbrowser/: AGENTS.md  __init__.py  _allowlist.py  _browser_common.py  _native.pyi  _upstream.json  _version.py  agent.py  agent_async.py  browser.py  browser_async.py  command_params.py  default_session.py  domains.py  domains_async.py  install.py  launch.py  models.py  notebook.py  query.py  query_async.py  session.py  session_async.py  session_id.py  skills.py
src/agentbrowser/cdp/: __init__.py  _protocol.py  _resolution.py  client.py  controller.py  errors.py  page.py  target.py  transport.py
src/pyagentbrowser/: __init__.py  _allowlist.py  _browser_common.py  _version.py  agent.py  agent_async.py  browser.py  browser_async.py  command_params.py  default_session.py  domains.py  domains_async.py  launch.py  models.py  notebook.py  session.py  session_async.py  session_id.py  skills.py
src/pyagentbrowser/cdp/: __init__.py  _protocol.py  _resolution.py  client.py  controller.py  errors.py  models.py  page.py  target.py
tests/: AGENTS.md  conftest.py  fakes.py  test_agent_refs.py  test_allowlist.py  test_browser_api.py  test_browser_integration.py  test_cdp.py  test_chrome_discovery.py  test_continuations.py  test_docs_check.py  test_install.py  test_native.py  test_package_smoke.py  test_release_tag.py  test_session.py  test_skills.py  test_upstream_contract.py
tests/packaging/: test_package_smoke.py  test_release_tag.py  test_upstream_contract.py
