[project]
name = "pyagentbrowser"
version = "0.32.3"
description = "Python SDK for controlling the native agent-browser engine in-process"
readme = "README.md"
authors = [
    { name = "Péter Ferenc Gyarmati", email = "dev.petergy@gmail.com" }
]
license = "Apache-2.0"
license-files = [
    "LICENSE",
    "NOTICE",
    "third_party/agent-browser/LICENSE",
    "third_party/agent-browser/cli/src/native/a11y/LICENSE-axe-core.txt",
    "third_party/agent-browser/cli/src/native/a11y/LICENSE-axe-core-THIRD-PARTY.txt",
]
requires-python = ">=3.11,<3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Typing :: Typed",
]
keywords = [
    "agent-browser",
    "browser automation",
    "evidence",
    "refs",
    "snapshots",
]

[project.optional-dependencies]
cdp = [
    "websockets>=15.0",
]
images = [
    "pillow>=12.0",
]

[project.urls]
"Homepage" = "https://github.com/peter-gy/pyagentbrowser"
"Repository" = "https://github.com/peter-gy/pyagentbrowser"
"Issues" = "https://github.com/peter-gy/pyagentbrowser/issues"
"Documentation" = "https://github.com/peter-gy/pyagentbrowser#readme"
"agent-browser docs" = "https://agent-browser.dev/"
"agent-browser commands" = "https://agent-browser.dev/commands"
"agent-browser CDP mode" = "https://agent-browser.dev/cdp-mode"
"Upstream agent-browser" = "https://github.com/vercel-labs/agent-browser"

[build-system]
requires = ["maturin>=1.11,<2"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "pillow>=12.0",
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.12",
    "tomlkit>=0.13.3",
    "ty>=0.0.34",
]

[tool.uv]
required-version = ">=0.8.4"
default-groups = ["dev"]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py311"]
locked = true
module-name = "agentbrowser._native"
python-source = "src"
manifest-path = "crates/pyagentbrowser/Cargo.toml"
exclude = [
    ".gitattributes",
    ".github/**",
    ".venv*/**",
    "AGENTS.md",
    "Cargo.toml.orig",
    "CLAUDE.md",
    "crates/AGENTS.md",
    "crates/agent-browser-adapter/Cargo.lock",
    "crates/agent-browser-adapter/target/**",
    "development_docs/**",
    "src/agentbrowser/AGENTS.md",
    "target/**",
    "tests/**",
    "third_party/agent-browser/.claude-plugin/**",
    "third_party/agent-browser/.github/**",
    "third_party/agent-browser/.gitignore",
    "third_party/agent-browser/.husky/**",
    "third_party/agent-browser/.prettierrc",
    "third_party/agent-browser/AGENTS.md",
    "third_party/agent-browser/CHANGELOG.md",
    "third_party/agent-browser/README.md",
    "third_party/agent-browser/agent-browser.schema.json",
    "third_party/agent-browser/benchmarks/**",
    "third_party/agent-browser/bin/**",
    "third_party/agent-browser/cli/src/chat.rs",
    "third_party/agent-browser/cli/src/doctor/**",
    "third_party/agent-browser/cli/src/main.rs",
    "third_party/agent-browser/cli/src/output.rs",
    "third_party/agent-browser/cli/src/skills.rs",
    "third_party/agent-browser/cli/src/upgrade.rs",
    "third_party/agent-browser/docker/**",
    "third_party/agent-browser/docs/**",
    "third_party/agent-browser/evals/**",
    "third_party/agent-browser/examples/**",
    "third_party/agent-browser/package.json",
    "third_party/agent-browser/packages/**",
    "third_party/agent-browser/pnpm-lock.yaml",
    "third_party/agent-browser/pnpm-workspace.yaml",
    "third_party/agent-browser/scripts/**",
    "third_party/agent-browser/skills/**",
    "uv.lock",
    "wheels/**",
]
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "NOTICE", format = "sdist" },
    { path = "docs/*.md", format = "sdist" },
    { path = "examples/*.py", format = "sdist" },
    { path = "Cargo.lock", format = "sdist" },
    { path = "crates/pyagentbrowser/**", format = "sdist" },
    { path = "crates/agent-browser-adapter/**", format = "sdist" },
    { path = "rust-toolchain.toml", format = "sdist" },
    { path = "third_party/agent-browser/LICENSE", format = "sdist" },
    { path = "third_party/agent-browser/cli/Cargo.toml", format = "sdist" },
    { path = "third_party/agent-browser/cli/cdp-protocol/**/*", format = "sdist" },
    { path = "third_party/agent-browser/cli/src/**/*", format = "sdist" },
    { path = "third_party/agent-browser/skill-data/**/*", format = "sdist" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--durations=20",
    "-m",
    "not integration",
]
xfail_strict = true
timeout = 120
timeout_func_only = true
filterwarnings = [
    "error",
]
markers = [
    "integration: real browser checks for Python, PyO3, adapter, and CDP seams",
    "native_smoke: PyO3 and generated-adapter boundary checks",
    "packaging: wheel, sdist, and release-boundary contract tests",
    "sdk_dx: fast tests for Python SDK contracts, refs, evidence, skills, safety, and async behavior",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
